syntax = "proto3";

message RegisterDevice       { string device_uuid = 1; string replica_id = 2; }
message DrainEvent           { string device_uuid = 1; }
message ReplicaFailEvent     { string  replica_id = 1; }
message MonitoredFailEvent   { string  device_uuid = 1; }
message ResetLearningRate    { string  lr = 1; }

message EventEnvelope {
  uint64  seq      = 1;
  uint64  ts_nanos = 2;
  oneof body {
    RegisterDevice       register_device   = 9;
    DrainEvent           drain             = 10;
    ReplicaFailEvent     replica_fail      = 11;
    MonitoredFailEvent   monitored_fail    = 12;
    ResetLearningRate    learning_rate     = 14;
  }
}

message DeviceReplicaMapEntry {
  string device_uuid = 1;
  int32  replica_id   = 2;
}